--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@
 
 title: DOC by SALIM.LINK
 description: General Documentation For My Projects.
-url: https://salimbenfarhat.github.io
+url: https://doc.salim.link
 google_analytics_key:
 permalink: pretty
-baseurl: /doc
 
 # -----
 # Build
