19/09/2023 - Trying fixing baseurl error 3rd test

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: General Documentation For My Projects.
 url: https://doc.salim.link
 google_analytics_key:
 permalink: pretty
-baseurl: ""
+baseurl: https://doc.salim.link
 
 # -----
 # Build
