--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ collections:
   nodejs:
     title: NodeJS
     position_number: 5
+  django:
+    title: Django
+    position_number: 6
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
@@ -66,6 +69,11 @@ defaults:
   -
     scope:
       type: "nodejs"
+    values:
+      _hide_content: true
+  -
+    scope:
+      type: "django"
     values:
       _hide_content: true
 
